--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,15 @@
 h1 {
-  color: rgb(92, 20, 105);
+  color: rgb(92, 20, 120);
   text-align: center;
   font-style: italic;
   font-weight: 900;
 }
 
 p {
+  color: #c69eb0;
   font-family: cursive;
+}
+
+body{
+  background-color: rgb(64, 6, 77);
 }
